2004-07-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/lilypond-book.py (Lilypond_snippet.is_outdated): Check
	for lilypondend.

2004-07-16  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* make/mutopia-vars.make ($(addprefix $(outdir)/,$(LYM4_FILES):
	bypass dvi. 

	* input/regression/font-postscript.ly: new file. 

	* scm/framework-ps.scm (load-fonts): load pfb files too.

	* lily/pfb.cc (pfb2pfa): new file.

2004-07-15  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (PREAMBLE_LY): set
	toplevel-music-handler too.

2004-07-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* SConstruct (symlink): Add dvips and music-drawing-routines.ps.
	(web_path): Fixes for webball.  Install fixes, add DESTDIR option.

	* lily/slur.cc: Add quant-score to interface.  Fixes web build.

	* python/SConscript:
	* python/vim:
	* input/mutopia/*SConscript: New file.

	* input/mutopia/W.A.Mozart/: Use .ily suffix for includes.

	* scm/define-grobs.scm (all-grob-descriptions): Use ,Slur::height,
	fixes web build.

	* make/stepmake.make (scons): re-route to SCONS if user has been
	running scons in this tree.

	* SConstruct (config_vars): Add CPPDEFINES.
	(env): Set checksums type to "content".
	(save_config_cache): Do not exit after configuring when using
	checksums (the default) instead of timestamps.

2004-07-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* SConstruct: Further development.

	* input/test/SConscript: 
	* input/template/SConscript: 
	* input/regression/SConscript: 
	* Documentation/bibliography/SConscript:
	* Documentation/bibliography/index.html.in: New file.

	* Documentation/bibliography/GNUmakefile (local-WWW): Remove index
	generation.

	* buildscripts/builder.py: Add new builders.

	* make/stepmake.make: 
	* stepmake/stepmake/*.make: 
	* configure.in:
	* lily/*:
	* flower*: Use config.hh (Was config.h).

	* scm/encoding.scm (get-coding): Print friendly error message when
	no encoding is found, rather than crashing.
